--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Artemis-to-Actaeon-and-Other-Verses_4549
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Wharton, Edith
@@ -14,6 +17,8 @@ creator:
     - http://en.wikipedia.org/wiki/Edith_Wharton
     - http://fr.wikipedia.org/wiki/Edith_Wharton
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/4549#Artemis-to-Actaeon-and-Other-Verses
 gutenberg_issued: '2003-10-01'
 gutenberg_type: Text
 identifiers:
